@@ -7,6 +7,7 @@ Agregada tecla-f/icono para lanzar una acción ("SendKeysMenu") para enviar tecl
 Permitir al driver SDL usar una paleta de color de 8 bits
 Permitir al driver SDL forzar el tamaño de la ventana
 Permitir variable de entorno DESTDIR en el paso make install
+Permitir acelerar carga de diskette, microdrive, etc
 
 Mejorado ZX Vision:
 - Agregado nuevo Menú Superior (no habilitado por defecto)
